# snowcover

fmlibs/libfmcol/trunk/: Makefile.in  README  configure  configure.ac
fmlibs/libfmcol/trunk/docs/: libfmcol_user_manual.odt
fmlibs/libfmcol/trunk/src/: Makefile.in  avhrr_stdat.c  avhrr_stdat.h  check_avhrr.c  check_safct.c  decode_cfg.c  error.c  fmcol.h  fmcol_config.h.in  fmcolaccess.c  fmcolaccess.h  fmcoltst.c  nwp_read.c  nwp_read.h  nwp_stdat.c  nwp_stdat.h  safcm_stdat.c  safcm_stdat.h  safdli_stdat.c  safdli_stdat.h  safssi_stdat.c  safssi_stdat.h  std_stdat.c  std_stdat.h  stdats4hdf.h
fmlibs/libfmio/branches/fm/: Makefile.in  configure
fmlibs/libfmio/tags/start/: README  configure.ac
fmlibs/libfmio/tags/start/doc/: libfmio_user_manual.odt
fmlibs/libfmio/tags/start/src/: Makefile.in  config.h.in  fm_MITIFF_head.c  fm_MITIFF_read.c  fm_MITIFF_write.c  fm_aha_hd.c  fm_readdata.c  fm_readheader.c
fmlibs/libfmio/trunk/: Makefile  Makefile.am  Makefile.in  README  _configs.sed  aclocal.m4  config.status  configure  configure.ac
fmlibs/libfmio/trunk/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
fmlibs/libfmio/trunk/commonM4cros/: ax_metno_arg_with.m4  ax_metno_check_libheader.m4
fmlibs/libfmio/trunk/doc/: libfmio_user_manual.odt
fmlibs/libfmio/trunk/src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  fm_MITIFF_head.c  fm_MITIFF_read.c  fm_MITIFF_write.c  fm_aha_hd.c  fm_aha_hd.h  fm_byte2float.c  fm_extractstructs.c  fm_img2mihead.c  fm_init_fmio_img.c  fm_readHLHDFdata.c  fm_readdata.c  fm_readdataMETSAT.c  fm_readdataMETSATswath.c  fm_readfmdataset.c  fm_readheader.c  fmio.h  fmio_config.h  test_h5  test_readh5.c
fmlibs/libfmutil/trunk/: Makefile  Makefile.am  Makefile.in  README  README_headers  _configs.sed  config.status  configure  configure.ac
fmlibs/libfmutil/trunk/autom4te.cache/: output.3  requests  traces.0  traces.1  traces.2  traces.3
fmlibs/libfmutil/trunk/commonM4cros/: ax_metno_check_lib.m4  ax_prefix_config_h.m4
fmlibs/libfmutil/trunk/doc/: libfmutil_user_manual.odt
fmlibs/libfmutil/trunk/src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  fm_ch3b_reflectance.c  fm_ch3b_reflectance.h  fmangleconversion.c  fmangleconversion.h  fmangles.c  fmangles.h  fmbyteswap.c  fmbyteswap.h  fmcolormaps.c  fmcolormaps.h  fmcoord.c  fmcoord.h  fmerrmsg.c  fmerrmsg.h  fmfeltfile.c  fmfeltfile.h  fmfilesystem.c  fmfilesystem.h  fmimage.c  fmimage.h  fmselalg.c  fmsolar.c  fmsolar.h  fmstorage.c  fmstorage.h  fmstrings.c  fmstrings.h  fmsubtrack.c  fmtime.c  fmtime.h  fmtouch.c  fmtouch.h  fmutil.h  fmutil_config.h  fmutil_types.h  (+1 more)
fmlibs/libfmutil/trunk/src/m4cros/: ax_metno_check_header.m4  ax_metno_includepackage.m4
fmlibs/libfmutil/trunk/testsuite/: Makefile  Makefile.am  Makefile.in  test_fmtime_1  test_fmtime_1.c  test_fmtime_2  test_fmtime_2.c  test_fmtime_3  test_fmtime_3.c
fmlibs/liblist/branches/fou-fm/: configure.ac
fmlibs/liblist/branches/fou-fm/src/: Makefile.in  dbl_list.h  tool_qsort.c
fmlibs/liblist/branches/fou-fm/test/: test_Sort.c  test_listOfNativeType.c
fmlibs/liblist/tags/start/src/: Makefile.am  dbl_list.c  tool_qsort.h
fmlibs/liblist/trunk/: Makefile.am  README  configure.ac
fmlibs/liblist/trunk/src/: Makefile.am  dbl_list.c  dbl_list.h  dbl_list_strings.c
fmlibs/liblist/trunk/test/: Makefile.am  test_Sort.c  test_listOfComplexStructs.c  test_listOfNativeType.c  test_listOfStruct.c
fmlibs/librsprod/branches/GenerateTypeDependentCode/: configure.ac  rsprod.mk  rsprod.pc.in
fmlibs/librsprod/branches/GenerateTypeDependentCode/doc/: README
fmlibs/librsprod/branches/GenerateTypeDependentCode/src/: Makefile.am  calibration.c  field.c  hdf4_interface.c  listattributes.c  nc_interface.h  query_string.c  rsprod_report_utils.c  rsprod_report_utils.h  rsprod_string_utils.c  runtime_config.h  stringdata.c  stringdata.h  type.c  x_interface.h
fmlibs/librsprod/branches/GenerateTypeDependentCode/test/: test_Config.c  test_PackAndUnpack.c  test_StringData.c  test_hdf4Interface.c  test_helloWorld.c  test_ncFileRead.c  test_ncUnlimited.c  test_rsprodcharfields.c
fmlibs/librsprod/branches/fou-fm/: configure  configure.ac
fmlibs/librsprod/branches/fou-fm/doc/: README
fmlibs/librsprod/branches/fou-fm/src/: list.c  nc_interface.c  notype.c  rsprod.h  type.c
fmlibs/librsprod/tags/ReleaseBeforeOSISAFinclusion_20080911/: Makefile.am  README  configure.ac
fmlibs/librsprod/tags/ReleaseBeforeOSISAFinclusion_20080911/doc/: README
fmlibs/librsprod/tags/ReleaseBeforeOSISAFinclusion_20080911/src/: Makefile.am  attributes.c  calibration.c  calibration.h  dimensions.c  field.c  list.c  list.h  listattributes.c  nc_interface.c  nc_interface.h  notype.c  prepare_rsprod_h.sh  rsprod_intern.h  rsprod_memory_utils.h  rsprod_string_utils.h  rsprod_types.h
fmlibs/librsprod/tags/ReleaseBeforeOSISAFinclusion_20080911/test/: Makefile.am  test_PackAndUnpack.c  test_StringData.c  test_createAndWriteStandardField.c  test_ncInterface.c  test_rsprodcharfields.c
fmlibs/librsprod/tags/start/src/: Makefile.am  calibration.c  dimensions.c  field.c  list.h  listattributes.c  rsprod_intern.h  rsprod_memory_utils.c  rsprod_string_utils.c
fmlibs/librsprod/trunk/: Makefile.am  README
fmlibs/librsprod/trunk/src/: attributes.c  calibration.h  dimensions.c  file.c  hdf4_interface.h  nc_interface.c  notype.c  prepare_rsprod_h.sh  query_string.h  rsprod_intern.h  rsprod_string_utils.h  rsprod_typedefs.h  rsprod_types.h  runtime_config.c
fmlibs/librsprod/trunk/test/: Makefile.am  test_NoType.c  test_createAndWriteStandardField.c  test_ncFile.c  test_ncInterface.c
fmprojects/fmsnowcover/: Makefile  Makefile.in  config.status  configure  configure.ac
fmprojects/fmsnowcover/autom4te.cache/: output.0  requests  traces.0
fmprojects/fmsnowcover/src/: Makefile  Makefile.in  fmaccusnow  fmsnowcover  fmsnowcover.c  fmsnowcover.h  fmsnowcover_new.c  fmsnowcover_swath.c  getnwp.c  pix_proc.c  pix_proc_new.c  pix_proc_swath.c  probest.c  process_snow_avhrrgac.c  process_snow_avhrrgac.h
(+63 files in other folders)
