#
# NAME:
# NA
#
# PURPOSE:
# NA
#
# REQUIREMENTS:
# NA
#
# INPUT:
# NA
#
# OUTPUT:
# NA
#
# NOTES:
# NA
#
# BUGS:
# NA
#
# AUTHOR:
# NA
#
# MODIFIED:
# Thomas Lavergne, METNO/FOU, ??
#
# CVS_ID:
# $Id: Makefile.am,v 1.4 2009-04-01 13:25:24 steingod Exp $
# 

ACLOCAL_AMFLAGS = -I commonM4cros
SUBDIRS = src
EXTRA_DIST = doc
