###################################################################
#
# NAME : Makefile.am
#
# PURPOSE :
#    Input file for Automake, librsprod project.
#
# AUTHOR:
#    Thomas Lavergne, met.no, 15.04.2008
#
###################################################################

pkgname = rsprod

ACLOCAL_AMFLAGS = -I m4
SUBDIRS =  liblist src
EXTRA_DIST = doc autogen.sh

include rsprod.mk

