

lib_LIBRARIES = librsprod.a

librsprod_a_SOURCES = \
		      calibration.c \
		      type.c \
		      notype.c \
		      field.c \
		      dimensions.c \
		      listattributes.c \
		      attributes.c \
		      nc_interface.c \
		      rsprod.h \
		      rsprod_intern.h \
		      list.c \
		      list.h \
		      rsprod_memory_utils.c \
		      rsprod_memory_utils.h \
		      rsprod_string_utils.c \
		      rsprod_string_utils.h 

include_HEADERS = rsprod.h
